// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/TopNavPresenter  1`] = `
<div
  className="hig__top-nav"
>
  <div
    className="hig__top-nav__logo-wrapper"
  />
  <div
    aria-hidden={true}
    className="hig__top-nav__spacer"
    role="presentation"
  />
</div>
`;

exports[`top-nav/presenters/TopNavPresenter  2`] = `
<div
  className="hig__top-nav"
>
  <div
    className="leftActions"
  />
  <div
    className="hig__top-nav__logo-wrapper"
  >
    <div
      className="logo"
    />
  </div>
  <div
    aria-hidden={true}
    className="hig__top-nav__spacer"
    role="presentation"
  />
  <div
    className="rightActions"
  />
</div>
`;
